@@ -8,6 +8,8 @@ version 0.49:
 	  resized ICQ icons)
 	* Updated Dutch translation (thanks Floris Eshuis)
 	* Option to show aliases in conversation tabs
+	* Option to hide windows after sending messages
+	* licq2gaim.pl conversion script (thanks Arturo Cisneros, Jr.)
 
 version 0.48 (11/18/2001):
 	* Right-click on links to open/copy URL
